<resources>
    <string name="app_name">Placement System</string>

    <string name="text_sign_up">Sign-Up</string>
    <string name="text_login">Login</string>
    <string name="landing_page_message">Build your profile and give all kind of tests and get to know your chances to get a job.</string>
    <string name="login_greeting_text">Welcome Back!</string>
    <string name="login_message_text">Log into your account to enter details and know your chances.</string>
    <string name="signup_greeting_text">Welcome!</string>
    <string name="signup_message_text">Register yourself</string>
    <string name="username_edit_text_hint">Username</string>
    <string name="password_edit_text_hint">Password</string>
    <string name="forgot_password_text">Forgot Password?</string>
    <string name="new_here_text">New here?</string>
    <string name="create_an_account_text">Create an account</string>
    <string name="confirm_password_edit_text_hint">Confirm Password</string>
    <string name="already_have_account_text">Already have account?</string>
    <string name="step_1_text">Step 1 of 3</string>
    <string name="personal_details_text">Personal Details</string>
    <string name="personal_details_message">Fill the following details correctly and then move on to the next step.</string>
    <string name="first_name_edit_text_hint">First Name</string>
    <string name="last_name_edit_text_hint">Last Name</string>
    <string name="email_id_edit_text_hint">Email id</string>
    <string name="age_edit_text_hint">Age</string>
    <string name="gender_text">Gender</string>
    <string name="male_text">Male</string>
    <string name="female_text">Female</string>
    <string name="history_of_backlogs_text">History of Backlogs</string>
    <string name="yes_text">Yes</string>
    <string name="no_text">No</string>
    <string name="predict_text">Predict</string>
    <string name="_10th_standard_percentage_edit_text_hint">10th Standard Percentage</string>
    <string name="_12th_standard_percentage_edit_text_hint">12th Standard Percentage</string>
    <string name="cgpa_till_6th_semester_edit_text_hint">CGPA till 6th Semester</string>
    <string name="lived_in_hostel_text">Lived in Hostel</string>
    <string name="number_of_internships_edit_text_hint">Number of Internships</string>

    <string name="title_activity_login2">LoginActivity2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="lpa_string">LPA</string>
    <string name="company_name_edit_text_hint">Company Name</string>
    <string name="job_role_edit_text_hint">Job Role</string>
    <string name="job_description_edit_text_hint">Job Description</string>
    <string name="package_edit_text_hint">Package</string>
    <string name="add_company_text">Add Company</string>
    <string name="cgpa_text">CGPA</string>
    <string name="internship_text">Internship</string>
    <string name="next_text">Next</string>
    <string name="results_text">Results</string>
    <string name="test_completion_text">You\'ve Successfully Completed the Test</string>
    <string name="correct_answers_text">Correct Answers : %1$d</string>
    <string name="incorrect_answers_text">Incorrect Answers : %1$d</string>
    <string name="start_new_quiz_text">Start New Quiz</string>
    <string name="logical_test_text">Logical Test</string>
    <string name="quants_test_text">Quantitative Test</string>
    <string name="verbal_test_text">Verbal Test</string>
    <string name="technical_test_text">Technical Test</string>
    <string name="submit_quiz_text">Submit Quiz</string>
    <string name="home_page_text">Home Page</string>
    <string name="hello_user_text">Hello %1$s!</string>
    <string name="probability_text">%1$f %</string>
    <string name="application_link_text">Application Link</string>
    <string name="username_text">Username: %1$s></string>
    <string name="_text">Username: %1$s></string>
    <string name="quantitative_score_text">Quantitative Test Score: %1$d</string>
    <string name="logical_score_text">Logical Reasoning Test Score: %1$d</string>
    <string name="verbal_score_text">Verbal Test Score: %1$d</string>
    <string name="programming_score_text">Programming Test Score: %1$d</string>
    <string name="update_text">Update</string>
    <string name="logout_text">Logout</string>
    <string name="apply_text">Apply</string>
    <string name="upload_resume_text">Upload Resume</string>
    <string name="upload_job_description_text">Upload Job Description</string>
    <string name="quants_text">Quants</string>
    <string name="logical_text">Logical</string>
    <string name="verbal_text">Verbal</string>
    <string name="technical_text">Technical</string>
    <string name="company_list_text">Company List</string>
    <string name="predict_probability_text">Predict Probability</string>
    <string name="score_resume_text">Score Resume</string>
    <string name="no_file_selected_text">No File Selected</string>
    <string name="check_resume_text">Check Resume</string>
</resources>