<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#273746"
    tools:context=".ui.QuizResultActivity">

    <TextView
        android:id="@+id/result_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/crimson_text"
        android:text="@string/results_text"
        android:textColor="#F1C40F"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/successful_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/result_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/test_completion_text"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/successful_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/correct_ans_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/correct_answers_text"
            android:textColor="#00C853"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/incorrect_ans_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/incorrect_answers_text"
            android:textColor="#DD2C00"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_home"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_margin="50dp"
        android:background="@drawable/round_back_btn"
        android:text="@string/home_page_text"
        android:textStyle="bold" />

</RelativeLayout>