<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.UserProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="32dp"
        android:layout_marginVertical="16dp">

        <EditText
            android:id="@+id/user_profile_username_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            android:background="@drawable/edit_text_border"
            android:hint="@string/username_edit_text_hint"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="8dp"
            android:textColorHint="#757575" />

        <EditText
            android:id="@+id/user_profile_password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            android:background="@drawable/edit_text_border"
            android:hint="@string/password_edit_text_hint"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="8dp"
            android:textColorHint="#757575" />

        <EditText
            android:id="@+id/user_profile_cgpa_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            android:background="@drawable/edit_text_border"
            android:hint="@string/cgpa_text"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:padding="8dp"
            android:textColorHint="#757575" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

        <RadioGroup
            android:id="@+id/user_profile_gender_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/male_radio_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male_text"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp" />

            <RadioButton
                android:id="@+id/female_radio_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female_text"/>

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/internship_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

        <RadioGroup
            android:id="@+id/user_profile_internship_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/internship_yes_radio_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes_text"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp" />

            <RadioButton
                android:id="@+id/internship_no_radio_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_text"/>

        </RadioGroup>

        <TextView
            android:id="@+id/quants_score_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Quantitative test Score: 25"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_marginTop="4dp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/logical_score_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Logical test Score: 25"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_marginTop="4dp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/verbal_score_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Verbal test Score: 25"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_marginTop="4dp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/technical_score_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Technical test Score: 25"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_marginTop="4dp"
            android:textColor="@color/black"/>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/update_user_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_text"
        android:textColor="@color/white"
        android:layout_gravity="right"
        android:background="@drawable/button_border_dark"/>

</LinearLayout>