<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="3">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/landing_page_message"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginHorizontal="32dp"
        android:layout_centerInParent="true"/>

</RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_signup_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_sign_up"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp"
            android:background="@drawable/button_border_dark"
            android:textColor="@color/text_color" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_login"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp"
            android:textColor="@color/blue_500"
            android:background="@drawable/button_border_light" />

    </LinearLayout>

</LinearLayout>